--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,7 @@ layout: default
     {{ page.date | date_to_string }}
     |
     {% for tag in page.tags %}
-      {% capture tag_name %}{{ tag }}{% endcapture %}
-      <a href="/tags#{{ tag_name }}"><code class="highligher-rouge">{{ tag_name }}</code></a>
-      &nbsp;
+      {% include tag.html %}
     {% endfor %}
   </span>
 
