--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,11 +26,18 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="{{ site.baseurl }}/{{ site.author.resume }}" target="_blank">Resume</a>
-    <a class="sidebar-nav-item" href="https://github.com/{{ site.author.github }}" target="_blank">Github</a>
   </nav>
 
+  <h3 class="social">
+    <a class="fa fa-github-alt" href="https://www.github.com/zhirzh"></a>
+    <a class="fa fa-twitter" href="https://www.twitter.com/zhirzh"></a>
+    <a class="fa fa-facebook" href="https://www.facebook.com/zibbu.shirsh"></a>
+    <a class="fa fa-linkedin" href="https://www.linkedin.com/in/shirsh-zibbu/"></a>
+  </h3>
+
+
   <div class="sidebar-item">
-    <p>
+    <p style="font-family: inherit; letter-spacing: 0; font-size: inherit; line-height: inherit;">
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
   </div>
