--- a/public/css/index.css
+++ b/public/css/index.css
@@ -14,6 +14,8 @@ iframe.demo {
   width: 100%;
   box-shadow: inset 0 0 20px -2px lightgray;
   border-radius: 4px;
+  margin-top: 1em;
+  margin-bottom: 2em;
 }
 
 .tag {
@@ -72,8 +74,4 @@ p {
   letter-spacing: .01rem;
   font-size: 18px;
   line-height: 1.58;
-}
-
-.post {
-  margin-bottom: 2em;
 }
