remove old socials

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,13 +21,12 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/{{ site.author.resume }}" target="_blank">Resume</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/resume" target="_blank">Resume</a>
   </nav>
 
   <h3 class="social">
     <a class="fa fa-github-alt" href="https://www.github.com/zhirzh"></a>
     <a class="fa fa-twitter" href="https://www.twitter.com/zhirzh"></a>
-    <a class="fa fa-facebook" href="https://www.facebook.com/zibbu.shirsh"></a>
     <a class="fa fa-linkedin" href="https://www.linkedin.com/in/shirsh-zibbu/"></a>
   </h3>
 
