--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,20 +11,20 @@ layout: default
   {{ content }}
 </div>
 
-<div class="related">
-  <h2>Related Posts</h2>
+<nav>
   <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ site.baseurl }}{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
+    {% if page.previous.url %}
+      <li class="related-posts-previous">
+        <a href="{{ page.previous.url }}">← {{ page.previous.title }}</a>
       </li>
-    {% endfor %}
+    {% endif %}
+    
+    {% if page.next.url %}
+      <li class="related-posts-next">
+        <a href="{{ page.next.url }}">{{ page.next.title }} →</a>
+      </li>
+    {% endif %}
   </ul>
-</div>
+</nav>
 
 {% include disqus.html %}
